Building basic flask: Minimal Prototype with functioning pages

--- a/app/templates/layouts/main.html
+++ b/app/templates/layouts/main.html
@@ -34,33 +34,33 @@
                 <li class="nav-item dropdown ms-auto">
                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown">About</a>
                     <div class="dropdown-menu dropdown-menu-about dropdown-menu-end">
-                        <a href="{{ url_for('page_1') }}" class="nav-link" disabled="True">Item 1</a>
-                        <a href="{{ url_for('page_2') }}" class="nav-link" disabled="False">Item 2</a>
-                        <a href="{{ url_for('page_3') }}" class="nav-link" disabled="False">Item 3</a>
+                        <a href="{{ url_for('under_construction') }}" class="nav-link" disabled="True">Page 1</a>
+                        <a href="{{ url_for('under_construction') }}" class="nav-link" disabled="False">Page 1</a>
+                        <a href="{{ url_for('under_construction') }}" class="nav-link" disabled="False">Page 1</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown ms-auto">
                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Registration</a>
                     <div class="dropdown-menu dropdown-menu-end">
-                        <a class="nav-link" href="{{ url_for('register') }}">Signup</a>
-                        <a class="nav-link" href="{{ url_for('login') }}">Login</a>
-                        <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+                        <a class="nav-link" href="{{ url_for('under_construction') }}">Signup</a>
+                        <a class="nav-link" href="{{ url_for('under_construction') }}">Login</a>
+                        <a class="nav-link" href="{{ url_for('under_construction') }}">Logout</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown ms-auto">
                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown">User Settings/ Records</a>
                     <div class="dropdown-menu dropdown-menu-end">
-                        <a href="{{ url_for('user_update_form') }}" class="nav-link">Update User Info</a>
+                        <a href="{{ url_for('under_construction') }}" class="nav-link">Update User Info</a>
 
-                        <a href="{{ url_for('user_update_password_form') }}" class="nav-link">Update
+                        <a href="{{ url_for('under_construction') }}" class="nav-link">Update
                             Password</a>
-                        <a href="{{ url_for('user_profile') }}" class="nav-link">User Profile</a>
+                        <a href="{{ url_for('under_construction') }}" class="nav-link">User Profile</a>
                         <div class="dropdown-divider"></div>
-                        <a href="{{ url_for('results_history') }}" class="nav-link">Results Upload
+                        <a href="{{ url_for('under_construction') }}" class="nav-link">Results Upload
                             History</a>
                     </div>
                 </li>
-                <li class="nav-item visually-hidden"><a class="nav-link" href="{{ url_for('dashboard') }}">Analytics</a></li>
+                <li class="nav-item visually-hidden"><a class="nav-link" href="{{ url_for('under_construction') }}">Analytics</a></li>
             </ul>
         </div>
     </div>
