--- a/app/templates/pages/home.html
+++ b/app/templates/pages/home.html
@@ -20,7 +20,7 @@
                     <hr class="divider" />
                 </div>
                 <div class="col-lg-8 align-self-baseline">
-                    <a class="btn btn-primary btn-xl" href="{{ url_for('about_cmpd_aggregation') }}">Snap My Nutrition</a>
+                    <a class="btn btn-primary btn-xl" href="{{ url_for('upload_photo') }}">Snap My Nutrition</a>
                 </div>
             </div>
         </div>
@@ -43,7 +43,7 @@
                     <div class="mt-5">
                         <div class="mb-2"><span class="bi bi-envelope bi-icon"></span></div>
                         <h3 class="h4 mb-2">Feedback or Issues</h3>
-                        <p class="text-muted mb-0">Plese email us! <a href="mailto: example@me.com">example@me.com</a></p>
+                        <p class="text-muted mb-0">Please email us! <a href="mailto: example@me.com">example@me.com</a></p>
                     </div>
                 </div>
             </div>
