--- a/app/templates/pages/results.html
+++ b/app/templates/pages/results.html
@@ -8,7 +8,7 @@
 
     <!-- Load CSS libraries -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <link rel="stylesheet" href="static/css/custom_styles.css">
+    <link rel="stylesheet" href="../../static/css/custom_styles.css">
 
     <!-- GOOGLE FONTS -->
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,400italic,300italic' rel='stylesheet' type='text/css'>
@@ -26,12 +26,10 @@
     </div>
     <div class="row" style="height: 70vh; width: 55em">
         <div class="col-12" style="background: white">
-            <div class="row justify-content-center" style="height: 100%">
-                <img src="static/img/sample_upload_file_ui.png" alt="Sample File Upload UI">
+            <div class="row justify-content-center" style="height: auto; margin-left: 50px">
+                <img src="../../static/img/sample_upload_file_ui.png" alt="Sample File Upload UI">
             </div>
         </div>
-    </div>
-    <div class="row btn-row" style="height: 7vh; background: white; border: thin solid grey; border-radius: 5px">
     </div>
 </div>
 
@@ -46,6 +44,6 @@
 <script src="https://d3js.org/d3.v7.min.js"></script>
 
 <!-- own js files -->
-<script src="static/js/main.js"></script>
+<script src="../../static/js/main.js"></script>
 </body>
 </html>
