--- a/frontend/src/app/page.module.css
+++ b/frontend/src/app/page.module.css
@@ -13,6 +13,5 @@
 .card {
   display: flex;
   flex-direction: column;
-  background-color: #1976d2;
-  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 60px, white 0px);
+  background-image: linear-gradient(to bottom, #1976d2 60px, white 0px);
 }
